# chess-coach

./: .gitignore  pyproject.toml
benchmarks/vision/: dataset.py  evaluate.py  metrics.py
chesscoach/: cli.py  logging_utils.py  mlops.py  torch_utils.py  vision_cli.py
chesscoach/analysis/: coach.py  engine.py  models.py
chesscoach/explanation/: __init__.py  classifier.py  explainer.py  models.py  prompt.py  providers.py  tactics.py
chesscoach/vision/: __init__.py  board_detector.py  board_localizer.py  board_localizer_dataset.py  board_postprocess.py  detection_dataset.py  fen_builder.py  piece_assignment.py  piece_classifier.py  piece_detector.py  predictor.py  types.py
scripts/: benchmark_vision_latency.py  debug_detector_pipeline.py  debug_vision_benchmark.py  device.py  evaluate_board_detector.py  evaluate_board_localizer.py  evaluate_detector.py  explain_regression.py  hp_search.py  hyperparam_search.py  prepare_benchmark_dataset.py  prepare_board_localizer_dataset.py  prepare_detection_dataset.py  prepare_squares.py  train.py  train_board_localizer.py  train_detector.py  transfer_learn.py
tests/analysis/: test_coach.py  test_engine.py  test_models.py
tests/explanation/: test_classifier.py  test_explanation.py  test_prompt.py  test_providers.py  test_tactics.py
tests/vision/: conftest.py  test_benchmark_evaluate.py  test_board_detector.py  test_board_localizer.py  test_board_postprocess.py  test_debug_vision_benchmark_script.py  test_device_selection.py  test_evaluate_board_detector_script.py  test_evaluate_detector.py  test_fen_builder.py  (+11 more)
